--- a/permissions_visualization/views/setting.html
+++ b/permissions_visualization/views/setting.html
@@ -1,5 +1,7 @@
 <span>
 
+    <span us-spinner="{radius:30, width:8, length: 16}" ng-show="!isReady"></span>
+
     <setting-header></setting-header>
 
     <setting-resume></setting-resume>
